# www

./: .envrc  .gitignore  404.html  CNAME  Cargo.toml  LICENSE_MIT  Trunk.toml  flake.nix  index.html  input-11c4c0cdb7d4e425.css  input-127b3811196185e1.css  input-15ee9470f2d9b1c5.css  input-1e6a902f863b47ee.css  input-1ef39b16eadf0e7e.css  input-21cd0069759b6419.css  input-24d24cd4d789e0c8.css  input-2a2e16937f4c85b8.css  input-2edd945ac7ec23df.css  input-34f24944913d33d1.css  input-3eec675744dc9505.css  input-3f2e293538f3e3bd.css  input-5283d23cf44928dd.css  input-5eb1281e672a9695.css  input-618c8bf089b225bc.css  input-62b1f0ee71ac9a6e.css  input-660893fba1c08323.css  input-6adf0936100af221.css  input-6e6ea8ebac762476.css  input-74c9a64efcd96a59.css  input-7c8d715cca2c26c4.css  input-7ed38c3d4a24b456.css  input-82a4eadc3c68271d.css  input-8aeebad6c2ff423f.css  input-9228ea5b68263b57.css  input-92e634ebe4246ce8.css  input-93fa266d0d7b4214.css  input-94347e2a7957d1f1.css  input-9725c68ad306bb0.css  input-9a8b636b276d166c.css  input-9bbec35e7874dfa7.css  (+388 more)
dev/: CIM-2024-01-12-0754.excalidraw
doc/: stripe.md
src/: accessgpts.rs  aicomposable.rs  aiintegration.rs  architecture.rs  askquestions.rs  audittrail.rs  bravenewworld.rs  businessevolution.rs  businessmodel.rs  cards.rs  cardtest.rs  cim.rs  cimsvg.rs  codegeneration.rs  collaborate.rs  communications.rs  context.rs  customersupport.rs  customgpts.rs  customwork.rs  dashboard.rs  decisionmaking.rs  desctemplate.rs  deterministic.rs  events.rs  eventsourcing.rs  eventstreams.rs  existingapps.rs  footer.rs  lib.rs  (+35 more)
(+1 files in other folders)
